# Aura

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: main.py  requirements.txt
api/routes/: scrape.py  scrape_answer.py  search.py
frontend/: .env.example  README.md  package-lock.json
frontend/src/components/: ChatBox.jsx
frontend/src/hooks/: useChatModel.js  useMarketSearch.js
scraper/: .gitignore  LICENSE  README.md  pyproject.toml
scraper/configs/: _template.yaml  example_site.yaml
scraper/src/omniscraper/: __init__.py  ai_processor.py  cli.py  database.py  exporters.py  models.py  processor.py  scraper.py  url_builder.py
scraper/tests/: test_ai_processor.py  test_database.py  test_exporters.py  test_models.py  test_url_builder.py
